refactor AttachmentFilter to improve scoring logic and enhance content extraction from attachments